src/css/content.less
/* ... */
@media only screen and (max-width: 480px) {
    .container {
        padding: 0;
    }
    body > section section {
        border: none;
        .border-radius(0);
    }

    /* Force table to not be like tables anymore */
    table, thead, tbody, th, td, tr {
        display: block;
    }

    table {
        border: none;

        /* Hide table headers (but not display: none;, for accessibility) */
        thead tr {
            position: absolute;
            top: -9999px;
            left: -9999px;
        }

        tr {
            border: 1px solid #DDD;
            border-bottom: none;
            &:last-child {
                border-bottom: 1px solid #DDD;
            }
            &:first-child, &:first-child > td:first-child {
                .border-top-left-radius(5px);
                .border-top-right-radius(5px);
            }
            &:last-child, &:last-child > td:last-child {
                .border-bottom-left-radius(5px);
                .border-bottom-right-radius(5px);
            }
        }

        td {
            /* Behave  like a "row" */
            border: none;
            position: relative;
            padding-left: 35%;
        }

        td:before {
            /* Now like a table header */
            position: absolute;
            /* Top/left values mimic padding */
            top: 6px;
            left: 6px;
            width: 30%;
            padding-right: 10px;
            white-space: nowrap;
            font-weight: bold;
        }

    }

    #keyboard-shortcuts {
        width: 360px;
        margin-left: -180px;
    }


    /*
    Label the data
    */
    section#servers {
        table {
            td:nth-of-type(1):before { content: "name"; }
            td:nth-of-type(2):before { content: "databases"; }
            td:nth-of-type(3):before { content: "size"; }
            td:nth-of-type(4) { display: none; }
        }
    }

    section#databases {
        table {
            td:nth-of-type(1):before { content: "name"; }
            td:nth-of-type(2):before { content: "collections"; }
            td:nth-of-type(3):before { content: "size"; }
            td:nth-of-type(4) { display: none; }
        }
    }

    section#collections {
        table {
            td:nth-of-type(1):before { content: "name"; }
            td:nth-of-type(2):before { content: "documents"; }
            td:nth-of-type(3):before { content: "indexes"; }
            td:nth-of-type(4) { display: none; }
        }
    }
}

